--- a/style.css
+++ b/style.css
@@ -1,1 +1,157 @@
 
+.logo{
+    width:75px;
+    height:50px;
+    display: inline;
+    float:left;
+}
+.login{
+    display:inline;
+    float:right;
+    height:20px;
+    width: 65px;
+    color:white;
+    background-color: black;
+    border: 0;
+}
+.login:hover{
+    background-color: rgb(84, 84, 84);
+}
+.link{
+    text-decoration:none;
+
+}
+.link:visited{
+    text-decoration:none;
+}
+body {
+    margin:0;
+}
+nav {
+    list-style-type: none;
+    display:block;
+    height:40px;
+    float:left;
+}
+nav ul{
+    list-style-type: none;
+    margin:0;
+    padding:0;
+    padding-top:5px;
+    padding-bottom:5px;
+}
+nav ul li :hover{
+
+}
+.dropdown {
+    display:inline;
+    overflow: hidden;
+  }
+  
+  /* Dropdown button */
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */}
+    
+    .dropdown-content {
+        display: inline;
+        position: absolute;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+      }
+      
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        float: none;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+      }
+      
+      /* Add a grey background color to dropdown links on hover */
+      .dropdown-content a:hover {
+      }
+      
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+.link:active{
+}
+nav ul li{
+    padding:5px;
+    display:inline;
+}
+
+.topBar{
+    display:block;
+    width:100%;
+    height:50px;
+    background-color: lightgrey;
+    left: 0;
+    position:fixed;
+}
+
+.search-button{
+    float:right;
+    margin-right:25px;
+    padding:10px;
+}
+
+.search{
+    float:right;
+    height:18px;
+    padding:10px;
+}
+
+
+.navBlock{
+    display:block;
+    float:left;
+    left:0;
+    background-color: green;
+    width:100%;
+    border-radius:5px;
+    margin-top:50px;
+    position:fixed;
+}
+.navBlock a{
+    margin-left:25px;
+}
+.body{
+    display:block;
+}
+h1{
+    display:inline;
+}
+h2{
+    display:inline;
+}
+
+.footerLeft{
+    float:left;
+    left:0;
+}
+
+.footerRight{
+    right: 0;
+    float: right;
+}
+.footerLeft img{
+   padding-right: 50px;
+}
+
+.footer{
+    display: block;
+    background-color: green;
+    width:100%;
+    left:0;
+    bottom:-200px;
+    position:absolute;
+}
+
