--- a/style.css
+++ b/style.css
@@ -1,22 +1,10 @@
+*{
+font-family: 'poppins', ;
+}
 
-.logo{
-    width:75px;
-    height:50px;
-    display: inline;
-    float:left;
-}
-.login{
-    display:inline;
-    float:right;
-    height:20px;
-    width: 65px;
-    color:white;
-    background-color: black;
-    border: 0;
-}
-.login:hover{
-    background-color: rgb(84, 84, 84);
-}
+
+
+
 .link{
     text-decoration:none;
 
