--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 *{
-font-family: 'poppins', ;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
 header{
-    position:fixed;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px, 100px;
     background: red;
 }
+
+
 
 
 
