--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ header{
     background: red;
 }
 
+.navigation{
+    position: relative;
+    font-size: 1.1em;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+}
+
 
 
 
