--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header{
     background: red;
 }
 
-.navigation{
+.navigation a{
     position: relative;
     font-size: 1.1em;
     color: white;
