--- a/style.css
+++ b/style.css
@@ -6,16 +6,15 @@
 }
 
 header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 20px, 100px;
-    background: red;
+ height: 100vh;
+ background-size: cover;
+ background-position: center;
+ min-height: 100px;
 }
+
 ul{
     float: left;
-    list-style: none;
+    list-style-type: none;
     margin-top: 30px;
     min-height: 400px;
     margin-right: 60px;
