removed decore and whatnot

--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ ul{
 ul li {
     display: inline-block;
 }
+ul li a{
+    text-decoration: none;
+    color: white;
+    padding: 5px 20px;
+    border: 1px solid transparent;
+}
 
 
 
