--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ ul li {
 }
 ul li a{
     text-decoration: none;
-    color: white;
+    color: black;
     padding: 5px 20px;
     border: 1px solid transparent;
 }
