--- a/style.css
+++ b/style.css
@@ -21,10 +21,11 @@ ul{
     margin-right: 60px;
     font-size: 17px;
 }
-header ul li {
+
+ul li {
     display: inline-block;
 }
-header ul li a{
+ul li a{
     text-decoration: none;
     color: black;
     padding: 5px 20px;
