--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ header{
 ul{
     float: left;
     list-style-type: none;
+    overflow: hidden;
+    padding: 0;
     margin-top: 30px;
     min-height: 400px;
-    margin-right: 60px;
+    margin-right: 0;
     font-size: 17px;
 }
 
