--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ header{
 }
 
 ul{
-    float: left;
     list-style-type: none;
     overflow: hidden;
     padding: 0;
@@ -22,6 +21,9 @@ ul{
     min-height: 400px;
     margin-right: 0;
     font-size: 17px;
+}
+li{
+    float: left;
 }
 
 ul li {
@@ -42,6 +44,45 @@ ul li.active a {
     background-color: rgb(245, 22, 22);
     color:black;
 }
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }  
+
+
 .main{
     max-width: 1200px;
     margin: auto;
