--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 header{
  height: 100vh;
- background-color: white;
+ background-color: rgb(28, 76, 47);
  background-size: cover;
  background-position: center;
  min-height: 100px;
