--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ header{
  min-height: 100px;
 }
 
+.topBar{
+    background-color:white;
+}
+
 ul{
     list-style-type: none;
     overflow: hidden;
