--- a/style.css
+++ b/style.css
@@ -1,99 +1,47 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+.logo{
+    width:75px;
+    height:50px;
+    display: inline;
+    float:left;
 }
-
-header{
- height: 100vh;
- background-size: cover;
- background-position: center;
- min-height: 100px;
-}
-
-.topBar{
-    background-color:white;
-}
-
-nav{
-    background-color: rgb(28, 76, 47);
-}
-
-ul{
+nav {
     list-style-type: none;
-    overflow: hidden;
-    padding: 0;
-    margin-top: 30px;
-    min-height: 400px;
-    margin-right: 0;
-    font-size: 17px;
+    display:block;
+    float:left;
 }
-li{
-    float: left;
-}
-
-ul li {
-    display: inline-block;
-}
-ul li a{
-    text-decoration: none;
-    color: black;
-    padding: 5px 20px;
-    border: 1px solid transparent;
+.topBar{
+    
+    display:block;
+    width:100%;
+    height:50px;
+    background-color: lightgrey;
+    left: 0;
 }
 
-ul li a:hover{
-    background-color: rgb(245, 22, 22);
-    color:black;
+.search{
+    float:right;
+    margin-right:25px;
 }
-ul li.active a {
-    background-color: rgb(245, 22, 22);
-    color:black;
+.navBlock{
+    display:block;
+    float:left;
+    left:0;
+    background-color: green;
+    width:100%;
+}
+.navBlock a{
+    margin-left:25px;
+}
+.body{
+    display:block;
+}
+h1{
+    display:block;
+}
+h2{
+    display:inline;
 }
 
-li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-  }
-  
-  li.dropdown {
-    display: inline-block;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  .dropdown-content a:hover {background-color: #f1f1f1;}
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }  
-
-
-.main{
-    max-width: 1200px;
-    margin: auto;
-}
 
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
