--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
+nav {
+    display:block;
+    background-color: aqua;
+}
+h1 {
+    display:inline;
+}
+h2 { 
+    display:inline;
+}
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
