--- a/style.css
+++ b/style.css
@@ -2,10 +2,16 @@
     margin: 0;
     padding: 0;
 }
-
+.topBar {
+    display: block;
+    background-color: fuchsia;
+}
 nav {
     display:block;
     background-color: aqua;
+}
+ul {
+    display: inline;
 }
 h1 {
     display:inline;
