--- a/style.css
+++ b/style.css
@@ -12,8 +12,12 @@ nav {
     background-color: aqua;
     width: 100%
 }
-ul {
+nav ul {
     display: inline;
+}
+
+nav ul li{
+    display:inline
 }
 h1 {
     display:inline;
