--- a/style.css
+++ b/style.css
@@ -13,10 +13,13 @@ nav {
     width: 100%
 }
 nav ul {
-    display: inline;
+  list-style-type: none;
+  display: inline;
+  margin: 0;
+  padding: 0;
 }
 
-nav ul li{
+li{
     display:inline
 }
 
