--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ h2 {
     display:inline;
 }
 
+/* ------------------- Tables ------------------- */
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
 /* ------------------- Footer ------------------- */
 
 .footerLeft{
