trying to fix footer

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
 
 }
 
+.mainBody {
+  display: block;
+}
+
 /* ------------------- Top Bar ------------------- */
 
 .header{
@@ -141,7 +145,7 @@ border-collapse: collapse;
 /* ------------------- Footer ------------------- */
 
 .footer{
-  position: fixed;
+ 
   left: 0;
   bottom: 0;
   width: 100%;
