--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ border-collapse: collapse;
 /* ------------------- Footer ------------------- */
 
 .footer{
-  position: fixed;
+  position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
