--- a/style.css
+++ b/style.css
@@ -6,60 +6,49 @@
 }
 
 body {
-  background-color: #4ABDAC;
+  background-color: white;
 
 }
+
+body, html { 
+  height:100%;
+}
+
+.mainBody {
+  position: relative;
+  height: 100%;
+}
+
 
 /* ------------------- Top Bar ------------------- */
+header {
+  background-image: url("headertest.jpeg");
+  /* Full height */
+  height: 100%;
 
-.header{
-  position:fixed;
-  width:100%;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-/* Navigation Bar and Top Bar*/
-.top-bar{
-  
-  display:flex;
-  justify-content:flex-start;
-
-  width:100%;
-
+header h1 {
+  color: white;
 }
 
-.top-bar{
 
-  background-image: url("https://2f1a7f9478.visitscotland.net/wsimgs/visitscotland_43421242803_396913506.jpg");
-  background-position: 50% 38%; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+header img {
+  height: 200px;
+  width:200px;
+ 
 
-  height:200px;
-}
-.top-bar div{
-  padding:10px 10px;
-}
-
-.title{
-  color:white;
-  font-family: Arial;
-  font-size:25px;
-  text-shadow: 2px 2px black;
-}
-
-#logo {
-  width:100px; 
-  height:100px;
-}
-
-/* moves search input and button to right */
-
-.search{
-  margin-left:auto;
 }
 
 /* ------------------- Navigation ------------------- */
 
+nav {
+  display: block;
+}
 
 nav ul {
   list-style-type: none;
@@ -155,6 +144,94 @@ table, th, td {
 border: 1px solid black;
 border-collapse: collapse;
 }
+
+/* ------------------- Carousel -------------------  */
+
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
 /* ------------------- Footer ------------------- */
 
 .footer{
