Added links and images to home learning Added onclick functions to home learning and uniform Added base calender Added some allignment to contact

--- a/style.css
+++ b/style.css
@@ -10,9 +10,8 @@ body {
 
 }
 
-body,
-html {
-  height: 100%;
+body, html { 
+  height:100%;
 }
 
 .mainBody {
@@ -39,7 +38,7 @@ header h1 {
 
 header img {
   height: 200px;
-  width: 200px;
+  width:200px;
 }
 
 /* ------------------- Navigation ------------------- */
@@ -53,15 +52,14 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color:black;
 }
 
 nav li {
   float: left;
 }
 
-nav li a,
-.aboutBtn {
+nav li a, .aboutBtn {
   border: none;
   display: inline-block;
   color: white;
@@ -71,11 +69,10 @@ nav li a,
   background-color: inherit;
   font-family: inherit;
   font-size: inherit;
-  width: 150px;
+  width:150px;
 }
 
-nav li a:hover,
-.dropdown:hover .aboutBtn {
+nav li a:hover, .dropdown:hover .aboutBtn {
   transition: 0.2s;
   background-color: white;
   color: black;
@@ -89,7 +86,7 @@ nav .dropdown-content {
   display: none;
   position: absolute;
   background-color: black;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
@@ -113,12 +110,11 @@ nav .dropdown:hover .dropdown-content {
 /* ------------------- Headings ------------------- */
 
 h1 {
-  display: inline;
+  display:inline;
 }
-
-h2 {
+h2 { 
   color: rgb(255, 0, 128);
-  display: inline;
+  display:inline;
 }
 
 /* ------------------- Tables ------------------- */
@@ -130,18 +126,15 @@ h2 {
   grid-column-gap: 50px;
 }
 
-.gridHeader,
-.gridTable {
-
+.gridHeader, .gridTable {
+  
   padding: 20px;
 }
 
-table,
-th,
-td {
+table, th, td {
 
-  border: 1px solid black;
-  border-collapse: collapse;
+border: 1px solid black;
+border-collapse: collapse;
 }
 
 .uniformContainer {
@@ -154,25 +147,30 @@ td {
 }
 
 .productCard {
-
-  height: 300px;
+  
+  height:300px;
 }
 
 .uniformContainer img {
 
   width: 250px;
-  height: 250px;
+  height:250px;
 }
 
 .productCardInfo {
-  display: none;
+  display:none;
 }
 
 .productCard:hover {
   .productCardInfo {
-    display: block;
+    display:block;
   }
+  
+}
 
+.HLimg {
+  width:100px;
+  height:100px;
 }
 
 /* ------------------- Carousel -------------------  */
@@ -184,8 +182,7 @@ td {
 }
 
 /* Next & previous buttons */
-.prev,
-.next {
+.prev, .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -207,9 +204,8 @@ td {
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
@@ -244,8 +240,7 @@ td {
   transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
+.active, .dot:hover {
   background-color: #717171;
 }
 
@@ -256,35 +251,25 @@ td {
 }
 
 @keyframes fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-
-  .prev,
-  .next,
-  .text {
-    font-size: 11px
-  }
+  .prev, .next,.text {font-size: 11px}
 }
 
 /* ------------------- Footer ------------------- */
 
-.content {
+.content{
   display: block;
 }
 
-.footer {
+.footer{
   position: absolute;
   left: 0;
-
+ 
   width: 100%;
   background-color: #F7B733;
   color: black;
@@ -292,18 +277,17 @@ td {
   text-align: center;
 }
 
-.footerLeft {
+.footerLeft{
   display: inline;
-  float: left;
-  left: 0;
+  float:left;
+  left:0;
 }
 
-.footerRight {
+.footerRight{
   display: inline;
   right: 0;
   float: right;
 }
-
-.footerLeft img {
-  padding-right: 50px;
+.footerLeft img{
+ padding-right: 50px;
 }
