--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@ body {
 
 }
 
-body, html { 
-  height:100%;
+body,
+html {
+  height: 100%;
 }
 
 .mainBody {
@@ -20,9 +21,9 @@ body, html {
 }
 
 
- /* ------------------- Header ------------------- */
-  
- 
+/* ------------------- Header ------------------- */
+
+
 
 
 
@@ -38,10 +39,10 @@ body, html {
 
 nav {
   display: block;
- background-color:#309167;
- border-bottom-style: solid;
- border-color: rgb(0, 0, 0);
-  
+  background-color: #309167;
+  border-bottom-style: solid;
+  border-color: rgb(0, 0, 0);
+
 }
 
 nav ul {
@@ -49,14 +50,15 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color:black;
+  background-color: black;
 }
 
 nav li {
   float: left;
 }
 
-nav li a, .aboutBtn {
+nav li a,
+.aboutBtn {
   border: none;
   display: inline-block;
   color: white;
@@ -66,10 +68,11 @@ nav li a, .aboutBtn {
   background-color: inherit;
   font-family: inherit;
   font-size: inherit;
-  width:150px;
+  width: 150px;
 }
 
-nav li a:hover, .dropdown:hover .aboutBtn {
+nav li a:hover,
+.dropdown:hover .aboutBtn {
   transition: 0.2s;
   background-color: white;
   color: black;
@@ -83,7 +86,7 @@ nav .dropdown-content {
   display: none;
   position: absolute;
   background-color: black;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -107,11 +110,12 @@ nav .dropdown:hover .dropdown-content {
 /* ------------------- Headings ------------------- */
 
 h1 {
-  display:inline;
+  display: inline;
 }
-h2 { 
+
+h2 {
   color: rgb(4, 76, 43);
-  display:inline;
+  display: inline;
 }
 
 /* ------------------- Tables ------------------- */
@@ -123,15 +127,18 @@ h2 {
   grid-column-gap: 50px;
 }
 
-.gridHeader, .gridTable {
-  
+.gridHeader,
+.gridTable {
+
   padding: 20px;
 }
 
-table, th, td {
+table,
+th,
+td {
 
-border: 1px solid black;
-border-collapse: collapse;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 .uniformContainer {
@@ -144,30 +151,30 @@ border-collapse: collapse;
 }
 
 .productCard {
-  
-  height:300px;
+
+  height: 300px;
 }
 
 .uniformContainer img {
 
   width: 250px;
-  height:250px;
+  height: 250px;
 }
 
 .productCardInfo {
-  display:none;
+  display: none;
 }
 
 .productCard:hover {
   .productCardInfo {
-    display:block;
+    display: block;
   }
-  
+
 }
 
 .HLimg {
-  width:100px;
-  height:100px;
+  width: 100px;
+  height: 100px;
 }
 
 /* ------------------- Carousel -------------------  */
@@ -176,33 +183,35 @@ border-collapse: collapse;
 
 /* ------------------- Footer ------------------- */
 
-.content{
+.content {
   display: block;
 }
 
-.footer{
+.footer {
   position: absolute;
   left: 0;
   width: 100%;
-  background-color: #309167;;
+  background-color: #309167;
+  ;
   color: black;
   display: block;
   text-align: center;
 }
 
-.footerLeft{
+.footerLeft {
   display: inline;
-  float:left;
-  left:0;
+  float: left;
+  left: 0;
 }
 
-.footerRight{
+.footerRight {
   display: inline;
   right: 0;
   float: right;
 }
-.footerLeft img{
- padding-right: 50px;
+
+.footerLeft img {
+  padding-right: 50px;
 }
 
 #bottom-divide-of-sch-img {
@@ -226,101 +235,116 @@ border-collapse: collapse;
   min-height: 70vh;
 }
 
-.welcomeMsg{
-text-align: center;
-height: 200px;
-margin-bottom: 50px;
+.welcomeMsg {
+  text-align: center;
+  height: 200px;
+  margin-bottom: 50px;
 }
-.welcomeMsg h2{
-font-size: 50px;
+
+.welcomeMsg h2 {
+  font-size: 50px;
 }
-.welcomeMsg p{
-font-size: 17px;
+
+.welcomeMsg p {
+  font-size: 17px;
 }
 
 .slideshow-container {
-max-width: 1000px;
-position: relative;
-margin: auto;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
 /* Next & previous buttons */
-.prev, .next {
-cursor: pointer;
-position: absolute;
-top: 50%;
-width: auto;
-padding: 16px;
-margin-top: -22px;
-color: white;
-font-weight: bold;
-font-size: 18px;
-transition: 0.6s ease;
-border-radius: 0 3px 3px 0;
-user-select: none;
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-right: 0;
-border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-color: #f2f2f2;
-font-size: 15px;
-padding: 8px 12px;
-position: absolute;
-bottom: 8px;
-width: 100%;
-text-align: center;
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-color: #f2f2f2;
-font-size: 12px;
-padding: 8px 12px;
-position: absolute;
-top: 0;
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-cursor: pointer;
-height: 15px;
-width: 15px;
-margin: 0 2px;
-background-color: #bbb;
-border-radius: 50%;
-display: inline-block;
-transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-background-color: #717171;
+.active,
+.dot:hover {
+  background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-animation-name: fade;
-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @keyframes fade {
-from {opacity: .4} 
-to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-.prev, .next,.text {font-size: 11px}
+
+  .prev,
+  .next,
+  .text {
+    font-size: 11px
+  }
 }
 
 .aims {
@@ -335,6 +359,7 @@ to {opacity: 1}
   list-style: none;
   margin-bottom: 40px;
 }
+
 .aims li {
   padding-top: 20px;
 }
@@ -357,17 +382,17 @@ to {opacity: 1}
 
 #HTmain {
   display: grid;
-grid-template-columns: auto auto;
-padding: 0px;
-height: fit-content;
-width: fit-content;
-background-color: #309167;
+  grid-template-columns: auto auto;
+  padding: 0px;
+  height: fit-content;
+  width: fit-content;
+  background-color: #309167;
 }
 
 #HTtext {
-height: fit-content;
+  height: fit-content;
   margin-top: 45%;
-text-align: center;
+  text-align: center;
 }
 
 #HTimg {
@@ -383,7 +408,7 @@ text-align: center;
 #brill {
   border-bottom: 10px solid #FDE992;
   border-top: 10px solid #FDE992;
-border-collapse: collapse;
+  border-collapse: collapse;
   background-color: #309167;
   margin-top: 100px;
   margin-bottom: 100px;
@@ -394,6 +419,7 @@ border-collapse: collapse;
   height: 100px;
   display: inline;
 }
+
 .dots {
   text-align: center;
 }
