--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav li a:hover,
   position: relative;
 }
 
-nav .dropdown-content {
+nav #dropdown-content {
   display: none;
   position: absolute;
   background-color: black;
@@ -90,7 +90,7 @@ nav .dropdown-content {
   z-index: 1;
 }
 
-nav .dropdown-content a {
+nav #dropdown-content a {
   color: white;
   padding: 12px 16px;
   text-decoration: none;
@@ -98,7 +98,7 @@ nav .dropdown-content a {
   text-align: left;
 }
 
-nav .dropdown-content a:hover {
+nav #dropdown-content a:hover {
   background-color: white;
   color: black;
 }
