--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@ html {
 
 /* ------------------- Header ------------------- */
 
-
+header {
+  background-image: url(images/headertest.jpeg);
+  height: 200px;
+}
 
 
 
