--- a/style.css
+++ b/style.css
@@ -24,8 +24,12 @@ html {
 /* ------------------- Header ------------------- */
 
 header {
-  background-image: url(images/headertest.jpeg);
+  background-image: url(images/tempTopBar.jpg);
+  bottom: 0;
   height: 200px;
+  background-repeat: no-repeat;
+ background-size: cover;
+
 }
 
 
@@ -34,8 +38,8 @@ header {
 /* ------------------- Navigation ------------------- */
 
 #logo {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   margin-right: 15px;
   float: left;
 }
