--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ h2 {
 
 #pageTitle {
   font-size: 45px;
+  display: block;
 }
 
 
@@ -387,13 +388,18 @@ td {
 
 /* ------------------- FAQ ------------------- */
 
+#QnA {
+  margin-top: 20px;
+  background-color: #717171;
+}
+
 #question {
-  margin: auto;
+
   background-color: #309167;
 }
 
 #answer {
-  margin: auto;
+
   background-color: #FDE992;
 }
 
