--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 * {
   margin: 0;
   padding: 0;
+ 
+}
+p{
+  font-size: 20px;
 }
 
 body {
@@ -46,6 +50,8 @@ body {
 .sub-banner-column {
   min-height: 35vh;
 }
+
+
 
 /* ------------------- Login ------------------- */
 
@@ -131,8 +137,8 @@ body {
 #logo {
   width: 50px;
   height: 50px;
-  margin-right: 15px;
   float: left;
+  
 }
 
 nav {
@@ -220,6 +226,9 @@ h2 {
   text-align: center;
 }
 
+.dropdownTitle{
+  display:block;
+}
 
 /* ------------------- Tables ------------------- */
 
@@ -238,16 +247,23 @@ td {
 
 #footer {
   width: 100%;
-  background-color: #309167;
+  background-color: #161616;
   bottom: 0;
-  color: black;
-  text-align: center;
+  color: rgb(255, 255, 255);
+}
+#cu, #button{
+  float: right;
 }
 
+.footer a, .footer h3,#cr{
+  text-align:left;
+}
 
 
 #footer img {
   padding-right: 50px;
+  border-radius: 1px;
+  border-color: white ;
 }
 
 #settingsPopup {
@@ -267,7 +283,7 @@ td {
 }
 
 .hero-banner-container {
-  background-image: url("images/prim-2.jpg") !important;
+  background-image: url(images/prim-2.jpg) !important;
   position: relative;
   background-color: #fff;
   background-position: 50%;
@@ -399,6 +415,7 @@ td {
   background: #309167;
   padding: 40px;
   box-shadow: 10px 10px #FDE992;
+  margin-top:20px;
 }
 
 .aims ul {
@@ -425,15 +442,20 @@ td {
   margin: auto;
   margin-bottom: 100px;
   padding: 20px;
+ 
 }
 
 #HTmain {
   display: grid;
   grid-template-columns: auto auto;
   padding: 0px;
-  height: fit-content;
-  width: fit-content;
+  height: fit-content;  
   background-color: #309167;
+  border-top-left-radius: 20%;
+  border-radius:450px/60%;
+  border-top-right-radius: 10%;
+  border-bottom-right-radius: 10%;
+
 }
 
 #HTtext {
@@ -457,6 +479,7 @@ td {
   background-color: #309167;
   margin-top: 100px;
   margin-bottom: 100px;
+  
 }
 
 .letter {
@@ -476,33 +499,28 @@ td {
 }
 
 .question {
-
+  padding:20px;
   background-color: #309167;
+  display: block;
 }
 
-.answer {
-
+.answer{
+  padding:20px;
   background-color: #FDE992;
 }
 
 
+
 /* ------------------- Dates ------------------- */
+#keyDts{
+
+  margin-left: 10%;
+}
 
 /* ------------------- Staff ------------------- */
 
 
-.gridContainer {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  padding: 10px;
-  grid-column-gap: 50px;
-}
 
-.gridHeader,
-.gridTable {
-
-  padding: 20px;
-}
 
 
 /* ------------------- Uniform ------------------- */
@@ -539,8 +557,37 @@ td {
 
 }
 
+#txt{
+  padding:40px;
+  text-align: center;
+  margin-bottom:20px;
+}
 
 /* ------------------- News ------------------- */
+.J-leader-msg{
+  text-align: center;
+  padding: 40px;
+
+  background: rgb(48,145,103);
+  background: linear-gradient(360deg, rgba(48,145,103,1) 60%, rgba(255,255,255,0) 100%);
+}
+.J-leader-msg p{
+  text-align: center;
+  font-size: 20px;
+  padding: 5%;
+}
+.sway-wrapper{
+  margin-left: 22%;
+  align-content: center;
+
+}
+.background-wrapper{
+  width: 100%;
+  height: 100%;
+
+}
+
+
 
 /* ------------------- Home Learning ------------------- */
 
@@ -551,22 +598,50 @@ td {
 }
 
 
+
+
 /* ------------------- Contact ------------------- */
 
-#location {
-  width: 100vh;
-  background-color: #309167;
-  margin: auto;
-  border: 10px solid #FDE992;
-  border-collapse: collapse;
-}
+
 
 #map {
-  border: 5px solid #FDE992;
-  border-collapse: collapse;
-  margin: 10%;
+  margin-left: 60%;
+  
+}
+.wrapper-contact{
+ 
+  height: 100%;
+
 }
 
 #location p {
   text-align: center;
+}
+
+#tel{
+width: 50%;
+margin-left: 20%;
+padding: 5%;
+}
+#email{
+ margin-left: 20%;
+ padding: 5%;
+
+}
+#email ul, #tel ul{
+list-style-type: none;
+padding: 20px;
+}
+#email li, #tel li{
+padding: 5px;
+}
+
+
+
+.wrapRndCon {
+
+display: grid;
+grid-template-columns: auto auto auto;
+margin-bottom: 5%;
+padding: 10px;
 }
